@@ -25,6 +25,7 @@ PREFIXMAN1 += src/preproc/tbl/tbl.1
 EXTRA_DIST += src/preproc/tbl/tbl.1.man
 
 tbl_TESTS = \
+  src/preproc/tbl/tests/boxes-and-vertical-rules.sh \
   src/preproc/tbl/tests/check-horizontal-line-length.sh \
   src/preproc/tbl/tests/check-line-intersections.sh \
   src/preproc/tbl/tests/check-vertical-line-length.sh \
@@ -34,18 +35,23 @@ tbl_TESTS = \
   src/preproc/tbl/tests/do-not-overlap-bottom-border-in-nroff.sh \
   src/preproc/tbl/tests/do-not-segv-on-invalid-vertical-span-entry.sh \
   src/preproc/tbl/tests/do-not-segv-when-backslash-R-in-text-block.sh \
+  src/preproc/tbl/tests/expand-region-option-works.sh \
   src/preproc/tbl/tests/format-time-diagnostics-work.sh \
   src/preproc/tbl/tests/save-and-restore-hyphenation-parameters.sh \
   src/preproc/tbl/tests/save-and-restore-inter-sentence-space.sh \
   src/preproc/tbl/tests/save-and-restore-line-numbering.sh \
   src/preproc/tbl/tests/save-and-restore-tab-stops.sh \
   src/preproc/tbl/tests/table-lacks-spurious-top-border.sh \
-  src/preproc/tbl/tests/warn-on-long-boxed-unkept-table.sh
+  src/preproc/tbl/tests/warn-on-long-boxed-unkept-table.sh \
+  src/preproc/tbl/tests/x-column-modifier-works.sh
 TESTS += $(tbl_TESTS)
 EXTRA_DIST += $(tbl_TESTS)
 
 tbl_XFAIL_TESTS = \
-  src/preproc/tbl/tests/table-lacks-spurious-top-border.sh
+  src/preproc/tbl/tests/boxes-and-vertical-rules.sh \
+  src/preproc/tbl/tests/expand-region-option-works.sh \
+  src/preproc/tbl/tests/table-lacks-spurious-top-border.sh \
+  src/preproc/tbl/tests/x-column-modifier-works.sh
 XFAIL_TESTS += $(tbl_XFAIL_TESTS)
 
 
